<resources>
    <string name="app_name">Journey</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="giphy">Giphy</string>
    <string name="trending">Trending</string>
    <string name="gws_title">Giphy Web Service</string>
    <string name="tinashe_mazaiwana">Tinashe Mazaiwana</string>
    <string name="ellah_nzikoba">Ellah Nzikoba</string>
    <string name="netti_welsh">Netti Welsh</string>
    <string name="binita_shakya">Binita Shakya</string>
    <string name="journey">Journey</string>
    <string name="random">Random</string>
    <string name="gift_hint">Search for a Gif</string>
    <string name="gif_title">Gif Title</string>
    <string name="gif_desc">Description/Username</string>
    <string name="or">Or</string>
    <string name="search">Search</string>
    <string name="sign_in_page">Sign In Page</string>
    <string name="button">Button</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_new_account">Create New Account</string>
    <string name="create">Create</string>
    <string name="create_account">Create Account</string>
    <string name="don_t_have_an_account_create_one_here">Don\'t have an account? Create one here.</string>
    <string name="already_have_an_account_sign_in_here">Already have an account? Sign in here.</string>
    <string name="messenger_page">Messenger Page</string>
    <string name="send_a_new_message">Send a sticker</string>
    <string name="welcome">Welcome</string>
    <string name="logout">Logout</string>
    <string name="recipient_email">To: %1$s</string>
    <string name="sender_email">%1$s sent you a new sticker!</string>
    <string name="sent_time">On: %1$s</string>
    <string name="count_goes_here">Count goes here</string>
    <string name="confirm_and_send">Send</string>
    <string name="send_message">Send Message</string>
    <string name="chat_messenger_heading">Chat Messenger</string>
    <string name="type_message_here">Type Message Here</string>
    <string name="history">History</string>
    <string name="history_title">History</string>
    <string name="sender">Sender</string>
    <string name="time_sent">Time Sent</string>
    <string name="temp_notification">Temp Notification</string>
    <string name="channel_id">Sticker_Channel_Notification</string>
    <string name="home_tab">Home</string>
    <string name="profile_tab">Profile</string>
    <string name="messages_tab">Messages</string>
    <string name="insights_tab">Insights</string>
    <string name="add_tab">Add</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile">Profile</string>
    <string name="insights">Insights</string>
    <string name="chat">Chat</string>
    <string name="profile_to_do">Profile To Do</string>
    <string name="to_do">To Do</string>
    <string name="timeline">Timeline</string>
    <string name="documents">Documents</string>
    <string name="sample_user_name">Hi, Jessica Jones</string>
    <string name="followers">Followers</string>
    <string name="_122">122</string>
    <string name="following">Following</string>
    <string name="add_new_application">Add new application</string>
    <string name="todo_sample_title">Transitioned to waiting for approval</string>
    <string name="todo_sample_time">September 21, 2022</string>
    <string name="doc_sample_time">09/21/23</string>
    <string name="completed">Completed</string>
    <string name="tasks">Tasks</string>
    <string name="add_a_new_task">Add a new task</string>
    <string name="task">Task</string>
    <string name="about">About</string>
    <string name="realtime_database">Realtime Database</string>
    <string name="todo3">todo3</string>
    <string name="todo">todo</string>
    <string name="todo2">todo2</string>
    <string name="cancel">Cancel</string>
    <string name="add_task">Add task</string>
    <string name="add_a_new_application">Add a new application</string>
    <string name="save">Save</string>
    <string name="type">Type</string>
    <string name="sponsor">Sponsor</string>
    <string name="date_time"><![CDATA[Date & Time]]></string>
    <string name="update_application">Update application</string>
    <string name="status">Status</string>
    <string name="date_picker">Date</string>
    <string name="time_picker">Time</string>
    <string name="back">Back</string>
    <string name="journeyApp">Journey</string>
    <string name="welcome_back">Welcome Back.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="reminders">Reminders</string>
    <string name="change_password">Change Password</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="location">Location</string>
    <string name="notification">Notification</string>
    <string name="help">Help</string>
    <string name="about_JourneyApp">About</string>
    <string name="delete_account">Delete Account</string>
    <string name="signout">Signout</string>
    <string name="settings">Settings</string>
    <string name="logo_Journey">Logo</string>
    <string name="email_JourneyUser">Email</string>
    <string name="password_JourneyPassword">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="log_in">Log In</string>
    <string name="create_an_account_to_get_started">Create an account to get started.</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in_here">Log in here.</string>
    <string name="don_t_have_an_account_already">Don\'t have an account already?</string>
    <string name="sign_up_here">Sign up.</string>
    <string name="sign_up">Sign up</string>
    <string name="full_name">Full Name</string>
    <string name="user_name_format">Hi, %1$s! </string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="sign_out">Sign Out</string>
    <string name="title">Application Name</string>
    <string name="complete">Complete</string>
    <string name="incomplete">Incomplete</string>
    <string name="dismiss">Dismiss</string>
    <string name="updates">Updates</string>
    <string name="title_activity_test_settings">TestSettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="current_password">Current Password</string>
    <string name="follow">Follow</string>
    <string name="click_here">click here.</string>
    <string name="for_more_information">For more information</string>
    <string name="disclaimer_header">Disclaimer Header</string>
    <string name="services_journey">Services</string>
    <string name="aboutIcondescrip">TODO</string>
    <string name="arrowForwardHelp">TODO</string>
    <string name="profileIconDescrip">TODO</string>
    <string name="arrowForwardProfile">TODO</string>
    <string name="passwordIconDescrip">TODO</string>
    <string name="arrowForwardPassword">TODO</string>
    <string name="friendsIconDescrp">TODO</string>
    <string name="arrowForwardFriends">TODO</string>
    <string name="notificationIconDescrip">TODO</string>
    <string name="arrowForwardNotification">TODO</string>
    <string name="helpIconDescrip">TODO</string>
    <string name="arrowForwardAbout">TODO</string>
    <string name="deletIconDescrip">TODO</string>
    <string name="arrowForwardDelete">TODO</string>
    <string name="signoutIconDescrip">TODO</string>
    <string name="arrowForwardSignout">TODO</string>
    <string name="locationIconDesc">TODO</string>
    <string name="arrowForwardLocation">TODO</string>
    <string name="toRecipient">To:</string>
    <string name="subject">Subject:</string>
    <string name="note_please_insert_the_following_email">Note: Please insert the following email: journey5520@aol.com</string>
    <string name="noteToUser">Please send to the following email: journey5520@aol.com</string>
    <string name="type_concern_here">Type message here. . .</string>
    <string name="choose_email_preference">Choose Email Preference</string>
    <string name="open_email">Open Email</string>
    <string name="contact_support">Contact Support</string>
    <string name="email_recipient">email recipient</string>
    <string name="concern">concern</string>
    <string name="pause_all_notifications">Pause All Notifications</string>
    <string name="message_notifications">Message Notifications</string>
    <string name="message_channel_id">Message_Channel_ID</string>
    <string name="current_password_BeforeUpdate">Current Password</string>
    <string name="update_password">Update Password</string>
    <string name="new_password">New Password</string>
    <string name="update">Update</string>
</resources>